force-app/main/default/objects/Recruiter__c/Recruiter__c.object-meta.xml
<CustomObject>
    <label>募集人</label>
    <nameField>
        <label>募集人氏名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>