force-app/main/default/objects/Recruiter__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>募集人</relationshipLabel>
    <relationshipName>Recruiter_Account</relationshipName>
    <type>Lookup</type>
</CustomField>