force-app/main/default/objects/Recruiter__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>FLOOR( ( TODAY() - Birthday__c ) / 365.2425 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年齢</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>