force-app/main/default/objects/Recruiter__c/fields/BasicAcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>BasicAcquisitionDate__c</fullName>
    <label>損保一般試験（基礎）取得年月日</label>
    <type>Date</type>
</CustomField>