force-app/main/default/objects/Recruiter__c/fields/BasicExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>BasicExpiryDate__c</fullName>
    <label>損保一般試験（基礎）有効期限年月日</label>
    <type>Date</type>
</CustomField>