force-app/main/default/objects/Recruiter__c/fields/CarAcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>CarAcquisitionDate__c</fullName>
    <label>損保一般試験（自動車）取得年月日</label>
    <type>Date</type>
</CustomField>