force-app/main/default/objects/Recruiter__c/fields/CarExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>CarExpiryDate__c</fullName>
    <label>損保一般試験（自動車）有効期限年月日</label>
    <type>Date</type>
</CustomField>