force-app/main/default/objects/Recruiter__c/fields/DiseaseAcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>DiseaseAcquisitionDate__c</fullName>
    <label>損保一般試験（傷害疾病）取得年月日</label>
    <type>Date</type>
</CustomField>