force-app/main/default/objects/Recruiter__c/fields/DiseaseExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>DiseaseExpiryDate__c</fullName>
    <label>損保一般試験（傷害疾病）有効期限年月日</label>
    <type>Date</type>
</CustomField>