force-app/main/default/objects/Recruiter__c/fields/FireAcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>FireAcquisitionDate__c</fullName>
    <label>損保一般試験（火災）取得年月日</label>
    <type>Date</type>
</CustomField>