force-app/main/default/objects/Recruiter__c/fields/FireExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>FireExpiryDate__c</fullName>
    <label>損保一般試験（火災）有効期限年月日</label>
    <type>Date</type>
</CustomField>