force-app/main/default/objects/Recruiter__c/fields/RecruiterId__c.field-meta.xml
<CustomField>
    <fullName>RecruiterId__c</fullName>
    <externalId>true</externalId>
    <label>募集人ＩＤ</label>
    <length>80</length>
    <type>Text</type>
</CustomField>