force-app/main/default/objects/Recruiter__c/fields/RecruiterNameKana__c.field-meta.xml
<CustomField>
    <fullName>RecruiterNameKana__c</fullName>
    <label>募集人カナ</label>
    <length>80</length>
    <type>Text</type>
</CustomField>