force-app/main/default/objects/Recruiter__c/validationRules/RecruiterName_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>RecruiterName_Input</fullName>
    <active>true</active>
    <description>募集人氏名は全角項目</description>
    <errorConditionFormula>NOT(
REGEX(Name, &quot;^[^ -~｡-ﾟ]+$&quot;)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>全角文字で入力してください</errorMessage>
</ValidationRule>