force-app/main/default/objects/Recruiter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RecruiterId__c</columns>
    <columns>NAME</columns>
    <columns>Birthday__c</columns>
    <columns>BasicExpiryDate__c</columns>
    <columns>CarExpiryDate__c</columns>
    <columns>FireExpiryDate__c</columns>
    <columns>DiseaseExpiryDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>